--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
-
+ html {
+      scroll-behavior: smooth; 
+    }
 
 p{
   margin-bottom:40px; 
